fix images on iphones

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -132,12 +132,13 @@
 
     .free_capacity {
       font-family: "Comfortaa";
-      font-size: 3.5vw;
+      font-size: 11px;
     }
 
     .green_dot {
-      width: 20px;
-      height: auto;
+      height: 30px;
+      width: auto;
+      margin: auto;
       animation-name: greenshow;
       animation-duration: 1s;
       animation-iteration-count: infinite;
@@ -157,13 +158,13 @@
 
     .cont_me {
       font-family: "Comfortaa";
-      font-size: 4vw;
+      font-size: 16px;
       color: #1DA1F2;
       text-decoration: underline #1DA1F2;
       text-align: left;
       height: 2vw;
       width: 40%;
-      padding: 30px 15px;
+      padding: 30px 0;
     }
 
     .animation_cont {
@@ -231,7 +232,7 @@
 
     .container_skills, .skills_body {
       width: 100%;
-      margin: 0;
+      margin-bottom: 30px;
       padding: 0;
     }
 
@@ -258,6 +259,7 @@
     .skills_text  {
       font-size: 4vw;
       text-align: center;
+
     }
 
     /* Galery */
